Proper Dark Mode Styles Fixes #13

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,6 @@
 @layer base {
   :root {
     --radius: 0.5rem
+    color-scheme: light dark;
   }
 }
